<resources>
    <string name="app_name">怪物猎人金手指</string>

    <string name="username">用户名（邮箱）</string>
    <string name="password">密码</string>
    <string name="login_hint">"
        使用须知：
        1.先注册后登录
        2.输入正确的完整的邮箱地址
        3.确保验证码邮件不是被垃圾策略拦截了
    </string>
    <string name="username_empty_hint">用户名不能为空</string>
    <string name="password_empty_hint">密码不能为空</string>
    <string name="register">注册</string>
    <string name="reg_code">验证码</string>
    <string name="login">登录</string>

    <string name="need_permission">APP需要授权才能使用</string>

    <string name="ok">确定</string>
    <string name="back">返回</string>

    <string name="title_misc">各种设置</string>

    <string name="title_stone">极品护石</string>
    <string name="stone_skill_name">护石技能</string>
    <string name="stone_skill_point">技能点数</string>
    <string name="stone_skill_rarity">护石稀有度</string>

    <string name="title_drink">饮料技能</string>

    <string name="title_info">文字信息</string>
    <string name="name_not_too_long_hint">名字不要太长，不然可能会有问题，屏幕也显示不全</string>
    <string name="player_name">玩家名字</string>
    <string name="player_intro">工会卡片介绍</string>
    <string name="player_name_empty_hint">玩家名字不能为空</string>
    <string name="player_info">玩家信息</string>

    <string name="button_add">+增加</string>
    <string name="cat_index_hint">第1只猫</string>
    <string name="cat_name">随从猫名字</string>
    <string name="cat_owner">随从猫主人名字</string>
    <string name="cat_intro">随从猫介绍</string>
    <string name="cat_list_more_than_25_hint">随从猫修改数量不能超过25只</string>
    <string name="cat_name_empty_hint">随从猫名字不能为空</string>
    <string name="cat_info">随从猫信息</string>

    <string name="title_value">数值设置</string>
    <string name="time">游戏时间</string>
    <string name="hour">小时</string>
    <string name="minute">分钟（00 – 59）</string>

    <string name="weapon_num">武器使用频率</string>
    <string name="weapon_type">武器类型</string>
    <string name="weapon_place">武器使用地点</string>
    <string name="num_hint">次数</string>

    <string name="card_quest_execute_num">任务执行次数</string>
    <string name="quest_type">任务种类</string>

    <string name="boss_record">狩猎捕获记录</string>
    <string name="boss_record_kill_num">狩猎数</string>
    <string name="boss_record_catch_num">捕获数</string>

    <string name="title_quest">自制任务</string>
    <string name="quest_basic">基本设置</string>
    <string name="quest_name">任务名称</string>
    <string name="quest_content">任务内容</string>
    <string name="quest_success_condition">成功条件</string>
    <string name="quest_failure_condition">失败条件</string>
    <string name="quest_main_monster">主要怪物</string>
    <string name="quest_client">委托人</string>
    <string name="quest_success_point">成功点数</string>
    <string name="quest_failure_point">失败点数</string>
    <string name="quest_contract_gold">契约金</string>
    <string name="quest_reward_gold">报酬金</string>
    <string name="quest_time_minute">任务时间（分）</string>
    <string name="quest_time_second">任务时间（秒）</string>
    <string name="quest_start_area">开始位置</string>
    <string name="quest_boss_skill">BOSS技能</string>
    <string name="quest_pick_off_rank">剥取素材级别</string>
    <string name="quest_bgm">BGM</string>
    <string name="quest_return_time">归还时间</string>

    <string name="quest_rank">任务级别</string>
    <string name="quest_map">任务地图</string>
    <string name="quest_join_condition_1">参加条件1</string>
    <string name="quest_join_condition_2">参加条件2</string>
    <string name="quest_success_condition_0">任务完成条件</string>
    <string name="quest_success_condition_1">条件1</string>
    <string name="quest_success_condition_2">条件2</string>
    <string name="quest_success_condition_1_item">条件1目标</string>
    <string name="quest_success_condition_2_item">条件2目标</string>
    <string name="quest_boss_icon_1">BOSS1图标</string>
    <string name="quest_boss_icon_2">BOSS2图标</string>
    <string name="quest_boss_icon_3">BOSS3图标</string>
    <string name="quest_boss_icon_4">BOSS4图标</string>
    <string name="quest_boss_icon_5">BOSS5图标</string>

    <string name="quest_shikyu">支给品设置</string>
    <string name="shikyu">支给品</string>
    <string name="shikyu_list_more_than_40_hint">支给品40个，不能再多了</string>

    <string name="quest_hosyu">报酬品设置</string>
    <string name="hosyu">报酬品</string>
    <string name="hosyu_limit_hint">自制任务报酬品暂时只支持设置一个\n额外的可以设置到支给品中，最多40个\n临时解决方案</string>

    <string name="quest_monster">小怪设置</string>
    <string name="monster">小怪</string>
    <string name="occur_area">出现位置</string>

    <string name="quest_boss">BOSS设置</string>
    <string name="quest_boss_num">数量</string>
    <string name="quest_boss_size">体型</string>
    <string name="boss">BOSS</string>
    <string name="quest_boss_status">状态</string>
    <string name="quest_boss_round">出场回合</string>
    <string name="quest_boss_hp">血量</string>
    <string name="quest_boss_strength">强度</string>
    <string name="quest_boss_endurance">部位耐性</string>
    <string name="quest_boss_fatigue">耐力</string>
    <string name="quest_name_empty_hint">任务名称不能为空</string>

    <string name="title_code">代码管理</string>
    <string name="code_operation">代码操作</string>
    <string name="code_operation_hint">查看：查看金手指代码内容\n分享：复制并分享给好友\n删除：彻底删除该条金手指代码\n长按：修改金手指名称</string>
    <string name="code_show">查看</string>
    <string name="code_show_content">代码内容</string>
    <string name="code_share">分享</string>
    <string name="code_copy">复制</string>
    <string name="code_copy_finish">代码已复制到剪贴板</string>
    <string name="code_delete">删除</string>
    <string name="code_rename">改名</string>

    <string name="title_about">关于</string>
    <string name="current_version">当前版本</string>
    <string name="about">
        MHP金手指\n\n
        这是一款方便操作PPSSPP金手指的软件\n\n
        使用前请确保自己已经会使用金手指，设置错误易死机\n\n
        By：林伟源
    </string>
</resources>
